Workaround for Code Cache eviction problems in Java 7 Hotspot
See http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2013-August/011344.html for more info.