@@ -3,6 +3,7 @@ package com.facebook.presto.server;
 import com.facebook.presto.failureDetector.FailureDetectorModule;
 import com.facebook.presto.metadata.CatalogManager;
 import com.facebook.presto.metadata.NodeManager;
+import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.inject.Injector;
 import com.google.inject.Module;
@@ -24,11 +25,69 @@ import io.airlift.node.NodeModule;
 import io.airlift.tracetoken.TraceTokenModule;
 import org.weakref.jmx.guice.MBeanModule;
 
-public class Main implements Runnable
+import java.lang.management.ManagementFactory;
+import java.lang.management.MemoryPoolMXBean;
+
+public class Main
+        implements Runnable
 {
     public static void main(String[] args)
     {
+        installCodeCacheGcTrigger();
+
         new Main().run();
+    }
+
+    private static void installCodeCacheGcTrigger()
+    {
+        // Hack to work around bugs in java 7 related to code cache management.
+        // See http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2013-August/011333.html for more info.
+        final MemoryPoolMXBean codeCacheMbean = findCodeCacheMBean();
+        Preconditions.checkNotNull(codeCacheMbean, "Could not obtain a reference to the 'Code Cache' MemoryPoolMXBean");
+
+        Thread gcThread = new Thread(new Runnable()
+        {
+            @Override
+            public void run()
+            {
+                Logger log = Logger.get("Code-Cache-GC-Trigger");
+
+                while (!Thread.currentThread().isInterrupted()) {
+                    long used = codeCacheMbean.getUsage().getUsed();
+                    long max = codeCacheMbean.getUsage().getMax();
+                    if (used > 0.7 * max) {
+                        // Due to some obscure bug in hotspot (java 7), once the code cache fills up the JIT stops compiling and never recovers from this condition.
+                        // By forcing classes to unload from the perm gen, we let the code cache evictor make room before the cache fills up.
+                        // For best results, the server should be run with -XX:+UseConcMarkSweepGC -XX:+ExplicitGCInvokesConcurrent -XX:+CMSClassUnloadingEnabled
+                        log.info("Triggering GC to avoid Code Cache eviction bugs");
+                        System.gc();
+                    }
+                    else if (used > 0.95 * max) {
+                        log.error("Code Cache is more than 95% full. JIT may stop working.");
+                    }
+
+                    try {
+                        Thread.sleep(1000);
+                    }
+                    catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                    }
+                }
+            }
+        });
+        gcThread.setDaemon(true);
+        gcThread.setName("Code-Cache-GC-Trigger");
+        gcThread.start();
+    }
+
+    private static MemoryPoolMXBean findCodeCacheMBean()
+    {
+        for (MemoryPoolMXBean bean : ManagementFactory.getMemoryPoolMXBeans()) {
+            if (bean.getName().equals("Code Cache")) {
+                return bean;
+            }
+        }
+        return null;
     }
 
     @Override
